--- a/PrimeAsia/src/App.css
+++ b/PrimeAsia/src/App.css
@@ -22,7 +22,22 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
+  width: 8px; /* vertical scrollbar width */
+  height: 5px; /* horizontal scrollbar height */
+}
+
+::-webkit-scrollbar-track {
+  background: #1c775a;
+  /* border-radius: 4px; */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0b202752;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #bfff00;
 }
 
 @font-face {
