--- a/PrimeAsia/src/Components/Hero/Hero.module.css
+++ b/PrimeAsia/src/Components/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .hero {
   background-color: #1c775a;
-  padding: 70px;
+  padding: 100px 70px 50px 70px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto 1fr auto;
