--- a/PrimeAsia/src/Components/Footer/Footer.module.css
+++ b/PrimeAsia/src/Components/Footer/Footer.module.css
@@ -11,7 +11,8 @@
 .paltd {
   grid-column: 1;
   grid-row: 2;
-  font-family: SemiBold;
+  font-family: Regular;
+  font-size: 12px;
   line-height: 0.9em;
   color: #94dfe0;
 }
@@ -26,21 +27,21 @@
 }
 .stitle {
   font-family: SemiBold;
-  font-size: 36px;
+  font-size: 18px;
   color: #cfd0c3;
   padding-bottom: 20px;
 }
 .link {
   display: flex;
   align-items: center;
-  gap: 20px;
-  margin-bottom: 10px;
+  gap: 10px;
+  margin-bottom: 5px;
 }
 
 .link a {
   text-decoration: none;
   font-family: light;
-  font-size: 14px;
+  font-size: 12px;
   color: #94dfe0;
   transition: color 0.25s ease;
 }
@@ -56,19 +57,19 @@
 }
 .ctitle {
   font-family: SemiBold;
-  font-size: 36px;
+  font-size: 18px;
   color: #cfd0c3;
   padding-bottom: 20px;
 }
 .contact {
   display: flex;
   align-items: center;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 10px;
+  margin-bottom: 10px;
 }
 .contact p {
   font-family: light;
-  font-size: 16px;
+  font-size: 12px;
   color: #94dfe0;
   transition: color 0.25s ease;
 }
@@ -88,7 +89,7 @@
   padding-top: 30px;
 
   font-family: light;
-  font-size: 18px;
+  font-size: 12px;
   color: #94dfe0;
 }
 
@@ -100,9 +101,9 @@
 .btn button {
   background-color: #bfff00;
   font-family: Bold;
-  font-size: 18px;
+  font-size: 11px;
   color: #0b2027;
-  padding: 10px;
+  padding: 7px 10px;
   border-radius: 5px;
   text-decoration: none;
   border: none;
