--- a/PrimeAsia/src/Components/Hero/Hero.module.css
+++ b/PrimeAsia/src/Components/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .hero {
   background-color: #1c775a;
-  padding: 100px 70px 50px 70px;
+  padding: 100px 70px 30px 70px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto 1fr auto;
@@ -33,7 +33,7 @@
   color: #0b2027;
   font-family: Light;
   text-align: center;
-  font-size: 36px;
+  font-size: 24px;
   border: 1px solid #cfd0c3;
-  height: 100px;
+  padding: 10px;
 }
